--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <br>
+
     <br>
     <br>
     <br>
@@ -65,6 +65,18 @@
 		<div class="col-lg-1">
 		</div>
 </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-5">
+    </div>
+    <div class="col-lg-2">
+      <a href="./static/cv.pdf" download><div class="cv">Download CV</div></a>
+    </div>
+    <div class="col-lg-5">
+    </div>
+  </div>
 </div>
 
   <!-- Optional JavaScript -->
