--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="col-lg-5">
     </div>
     <div class="col-lg-2">
-      <a href="/static/cv.pdf" download><div class="cv">Download CV</div></a>
+      <a href="https://github.com/chahkiev/chahkiev.github.io/blob/master/static/cv.pdf" download><div class="cv">Download CV</div></a>
     </div>
     <div class="col-lg-5">
     </div>
