added resume on site

--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
 <br>
 <div class="container">
   <div class="row">
-    <div class="col-lg-5">
+    <div class="col-lg-4">
     </div>
     <div class="col-lg-2">
-      <a href="/static/cv.pdf" download><div class="cv">Download CV</div></a>
+      <a href="/static/resume.pdf" download><div class="cv">Resume</div></a>
     </div>
-    <div class="col-lg-5">
+	<div class="col-lg-2">
+      <a href="/static/cv.pdf" download><div class="cv">CV</div></a>
+    </div>
+    <div class="col-lg-4">
     </div>
   </div>
 </div>
