added adaptive design

--- a/index.html
+++ b/index.html
@@ -1,93 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" href="static/img/favicon.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Chahkiev</title>
+    <link rel="icon" href="" sizes="32x32">
     <link rel="stylesheet" href="static/css/style.css">
-    <title>Magomed Chahkiev</title>
 </head>
-
 <body>
-
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <!-- <img src="static/img/1.jpg" class="displayed" alt="..." width="80" height="80"> -->
-    <h1 align="center" class="header">Magomed Chahkiev<h1>
-  <h6 align="center">Student of Bauman Moscow State Technical University && Technopark Mail.Ru<h6>
-  <h2 align="center">Developer<h2>
-  <br><br>
-  <h5 align="center">find me here:<h5>
-
-  <div class="container">
-    <div class="row">
-		<div class="col-lg-1">
-		</div>
-		<div class="col-lg-10">
-
-<div class="container">
-    <div class="row">
-
-		<div class="col-center icon">
-          <a href="https://t.me/maga_chahkiev"><img src="/static/img/tg.png" alt="..." width="80" height="80"></a>
-      </div>
-      <div class="col-center icon">
-          <a href="mailto:06aga06m@mail.ru"><img src="/static/img/mail.png"  alt="..." width="80" height="80"></a>
-      </div>
-      <div class="col-center icon">
-          <a href="https://vk.com/maga_chahkiev"><img src="/static/img/vk.png"  alt="..." width="80" height="80"></a>
-      </div>
-      <div class="col-center icon">
-          <a href="https://github.com/chahkiev"><img src="/static/img/gh.png"  alt="..." width="80" height="80"></a>
-      </div>
-      <div class="col-center icon">
-          <a href="https://www.linkedin.com/in/chahkiev/"><img src="/static/img/ln.png" alt="..." width="80" height="80"></a>
-      </div>
-      <div class="col-center icon">
-          <a href="https://www.instagram.com/maga_chaxkiev"><img src="/static/img/ig.png" alt="..." width="80" height="80"></a>
-      </div>
-	  <div class="col-center icon">
-          <a href="https://mykp.ru/chahkiev"><img src="/static/img/kp.png" alt="..." width="80" height="80"></a>
-      </div>
-
-	      </div>
-  </div>
-
-		</div>
-
-		<div class="col-lg-1">
-		</div>
-</div>
-</div>
-
-<br>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4">
+    <div class="center">
+        <div class="center-content">
+            <div class="center-wrapper">
+                <div class="name">MAGOMED CHAHKIEV</div>
+                <div class="status">Backend developer</div>
+                <div class="find-me-here">find me here:</div>
+                <div class="social-networks">
+                    <a href="https://t.me/maga_chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
+                    <a href="mailto:06aga06m@mail.ru"><div class="link"><img src="static/images/mail.png"></div></a>
+                    <a href="https://vk.com/maga_chahkiev"><div class="link"><img src="static/images/vk.png"></div></a>
+                    <a href="https://github.com/chahkiev"><div class="link"><img src="static/images/gh.png"></div></a>
+                    <a href="https://www.linkedin.com/in/chahkiev"><div class="link"><img src="static/images/ln.png"></div></a>
+                    <a href="https://www.instagram.com/maga_chaxkiev"><div class="link"><img src="static/images/ig.png"></div></a>
+                    <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a>
+                </div>
+                <div class="resume-content">
+                    <a href="static/resume_cv/resume.pdf" download><div class="cv">RESUME</div></a>
+                    <a href="static/resume_cv/cv.pdf" download><div class="cv">CV</div></a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-lg-2">
-      <a href="/static/resume.pdf" download><div class="cv">Resume</div></a>
-    </div>
-	<div class="col-lg-2">
-      <a href="/static/cv.pdf" download><div class="cv">CV</div></a>
-    </div>
-    <div class="col-lg-4">
-    </div>
-  </div>
-</div>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="static/js/script.js"></script>
 </body>
 </html>
