--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="status">Backend developer</div>
                 <div class="find-me-here">find me here:</div>
                 <div class="social-networks">
-                    <a href="https://t.me/maga_chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
-                    <a href="mailto:06aga06m@mail.ru"><div class="link"><img src="static/images/mail.png"></div></a>
+                    <a href="https://t.me/chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
+                    <a href="mailto:chahkiev98@mail.ru"><div class="link"><img src="static/images/mail.png"></div></a>
                     <a href="https://vk.com/maga_chahkiev"><div class="link"><img src="static/images/vk.png"></div></a>
                     <a href="https://github.com/chahkiev"><div class="link"><img src="static/images/gh.png"></div></a>
                     <a href="https://www.linkedin.com/in/chahkiev"><div class="link"><img src="static/images/ln.png"></div></a>
