--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <div class="social-networks">
                     <a href="https://t.me/chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
                     <a href="mailto:chahkiev98@mail.ru"><div class="link"><img src="static/images/mail.png"></div></a>
-                    <a href="https://vk.com/maga_chahkiev"><div class="link"><img src="static/images/vk.png"></div></a>
+                    <a href="https://vk.com/chahkiev_maga"><div class="link"><img src="static/images/vk.png"></div></a>
                     <a href="https://github.com/chahkiev"><div class="link"><img src="static/images/gh.png"></div></a>
                     <a href="https://www.linkedin.com/in/chahkiev"><div class="link"><img src="static/images/ln.png"></div></a>
-                    <a href="https://www.instagram.com/maga_chaxkiev"><div class="link"><img src="static/images/ig.png"></div></a>
+                    <a href="https://www.instagram.com/chahkiev_maga"><div class="link"><img src="static/images/ig.png"></div></a>
                     <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a>
                 </div>
                 <div class="resume-content">
