disabled site until resume updating

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <div class="center">
+    <!-- <div class="center">
         <div class="center-content">
             <div class="center-wrapper">
                 <div class="name">MAGOMED CHAHKIEV</div>
@@ -29,6 +29,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
