--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
     <title>Chahkiev</title>
     <link rel="icon" href="" sizes="32x32">
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <!-- <div class="center">
+    <div class="center">
         <div class="center-content">
             <div class="center-wrapper">
                 <div class="name">MAGOMED CHAHKIEV</div>
-                <div class="status">Backend developer</div>
+                <div class="status">Software engineer</div>
                 <div class="find-me-here">find me here:</div>
                 <div class="social-networks">
                     <a href="https://t.me/chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
@@ -23,12 +24,12 @@
                     <a href="https://www.instagram.com/chahkiev_maga"><div class="link"><img src="static/images/ig.png"></div></a>
                     <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a>
                 </div>
-                <div class="resume-content">
+                <!-- <div class="resume-content">
                     <a href="static/resume_cv/resume.pdf" download><div class="cv">RESUME</div></a>
                     <a href="static/resume_cv/cv.pdf" download><div class="cv">CV</div></a>
-                </div>
+                </div> -->
             </div>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
