--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chahkiev</title>
+    <title>chahkiev</title>
     <link rel="icon" href="static/images/favicon.ico" sizes="32x32">
     <link rel="stylesheet" href="static/css/style.css">
 </head>
