--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
                     <a href="https://t.me/chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
                     <a href="mailto:chahkiev98@mail.ru"><div class="link"><img src="static/images/mail.png"></div></a>
                     <a href="https://vk.com/chahkiev_maga"><div class="link"><img src="static/images/vk.png"></div></a>
+                    <a href="https://gitconnected.com/chahkiev/resume"><div class="link"><img src="static/images/cv.png"></div></a>
                     <a href="https://github.com/chahkiev"><div class="link"><img src="static/images/gh.png"></div></a>
                     <a href="https://www.linkedin.com/in/chahkiev"><div class="link"><img src="static/images/ln.png"></div></a>
                     <a href="https://www.instagram.com/chahkiev_maga"><div class="link"><img src="static/images/ig.png"></div></a>
                     <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a>
                 </div>
-                <!-- <div class="resume-content">
-                    <a href="static/resume_cv/resume.pdf" download><div class="cv">RESUME</div></a>
-                    <a href="static/resume_cv/cv.pdf" download><div class="cv">CV</div></a>
-                </div> -->
+                <div class="resume-content">
+<!--                     <a href="static/resume_cv/resume.pdf" download><div class="cv">RESUME</div></a>
+                    <a href="static/resume_cv/cv.pdf" download><div class="cv">CV</div></a> -->
+                </div>
             </div>
         </div>
     </div>
