--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="center-content">
             <div class="center-wrapper">
                 <div class="name">MAGOMED CHAHKIEV</div>
-                <div class="status">Software engineer</div>
+                <div class="status">Software engineer at Mail.Ru Group</div>
+                <div class="status">&&</div>
+                <div class="status">Master's degree student at BMSTU</div>
                 <div class="find-me-here">find me here:</div>
                 <div class="social-networks">
                     <a href="https://t.me/chahkiev"><div class="link"><img src="static/images/tg.png"></div></a>
@@ -22,7 +24,7 @@
                     <a href="https://github.com/chahkiev"><div class="link"><img src="static/images/gh.png"></div></a>
                     <a href="https://www.linkedin.com/in/chahkiev"><div class="link"><img src="static/images/ln.png"></div></a>
                     <a href="https://www.instagram.com/chahkiev_maga"><div class="link"><img src="static/images/ig.png"></div></a>
-                    <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a>
+                    <!-- <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a> -->
                 </div>
                 <div class="resume-content">
 <!--                     <a href="static/resume_cv/resume.pdf" download><div class="cv">RESUME</div></a>
