--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="https://github.com/chahkiev"><div class="link"><img src="static/images/gh.png"></div></a>
                     <a href="https://www.linkedin.com/in/chahkiev"><div class="link"><img src="static/images/ln.png"></div></a>
                     <a href="https://www.instagram.com/chahkiev_maga"><div class="link"><img src="static/images/ig.png"></div></a>
-                    <!-- <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a> -->
+                    <a href="https://mykp.ru/chahkiev"><div class="link"><img src="static/images/kp.png"></div></a>
                 </div>
                 <div class="resume-content">
 <!--                     <a href="static/resume_cv/resume.pdf" download><div class="cv">RESUME</div></a>
